firmware/build_log.txt
Processing pico (platform: https://github.com/maxgerhardt/platform-raspberrypi.git; board: pico; framework: arduino)
--------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/raspberrypi/pico.html
PLATFORM: Raspberry Pi RP2040 (1.18.0+sha.a1df30f) > Raspberry Pi Pico
HARDWARE: RP2040 133MHz, 256KB RAM, 2MB Flash
DEBUG: Current (blackmagic) External (blackmagic, cmsis-dap, jlink, pico-debug, picoprobe, raspberrypi-swd)
PACKAGES: 
 - framework-arduinopico @ 1.50401.0+sha.0affea4 
 - tool-picotool-rp2040-earlephilhower @ 5.140200.250530 (14.2.0) 
 - tool-pioasm-rp2040-earlephilhower @ 5.140200.250530 (14.2.0) 
 - toolchain-rp2040-earlephilhower @ 5.140200.250530 (14.2.0)
Flash size: 2.00MB
Sketch size: 2.00MB
Filesystem size: 0.00MB
PSRAM size: 0.00MB
Maximium Sketch size: 2093056 EEPROM start: 0x101ff000 Filesystem start: 0x101ff000 Filesystem end: 0x101ff000
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ chain, Compatibility ~ soft
Found 69 compatible libraries
Scanning dependencies...
Dependency Graph
|-- Wire @ 1.0
|-- SPI @ 1.0
Building in release mode
Compiling .pio/build/pico/src/qspi_driver.cpp.o
Compiling .pio/build/pico/src/spi_driver.cpp.o
<command-line>: warning: "USB_MANUFACTURER" redefined
<command-line>: note: this is the location of the previous definition
<command-line>: warning: "USB_PRODUCT" redefined
<command-line>: note: this is the location of the previous definition
<command-line>: warning: "USB_MANUFACTURER" redefined
<command-line>: note: this is the location of the previous definition
<command-line>: warning: "USB_PRODUCT" redefined
<command-line>: note: this is the location of the previous definition
Archiving .pio/build/pico/lib591/libWire.a
Archiving .pio/build/pico/lib2b7/libSPI.a
Indexing .pio/build/pico/lib591/libWire.a
Indexing .pio/build/pico/lib2b7/libSPI.a
Compiling .pio/build/pico/FrameworkArduino/BluetoothDebug.cpp.o
Compiling .pio/build/pico/FrameworkArduino/Bootsel.cpp.o
<command-line>: warning: "USB_MANUFACTURER" redefined
<command-line>: note: this is the location of the previous definition
<command-line>: warning: "USB_PRODUCT" redefined
<command-line>: note: this is the location of the previous definition
Compiling .pio/build/pico/FrameworkArduino/CoreMutex.cpp.o
<command-line>: warning: "USB_MANUFACTURER" redefined
<command-line>: note: this is the location of the previous definition
<command-line>: warning: "USB_PRODUCT" redefined
<command-line>: note: this is the location of the previous definition
<command-line>: warning: "USB_MANUFACTURER" redefined
<command-line>: note: this is the location of the previous definition
<command-line>: warning: "USB_PRODUCT" redefined
<command-line>: note: this is the location of the previous definition
src/qspi_driver.cpp:15:24: error: definition of implicitly-declared 'constexpr QSPIDriver::QSPIDriver()'
   15 | QSPIDriver::QSPIDriver()
      |                        ^
src/qspi_driver.cpp: In member function 'void QSPIDriver::begin()':
src/qspi_driver.cpp:24:11: error: 'csPin' was not declared in this scope; did you mean 'sin'?
   24 |   pinMode(csPin, OUTPUT);
      |           ^~~~~
      |           sin
src/qspi_driver.cpp:27:11: error: 'clkPin' was not declared in this scope
   27 |   pinMode(clkPin, OUTPUT);
      |           ^~~~~~
src/qspi_driver.cpp:39:11: error: 'QSPI_MODE_STANDARD' was not declared in this scope
   39 |   setMode(QSPI_MODE_STANDARD); // Default to Standard SPI
      |           ^~~~~~~~~~~~~~~~~~
*** [.pio/build/pico/src/qspi_driver.cpp.o] Error 1
src/spi_driver.cpp: In member function 'void SPIDriver::bitbangTransfer(uint8_t, uint8_t*, uint16_t)':
src/spi_driver.cpp:107:16: error: 'SPI_PIN_SCK' was not declared in this scope; did you mean 'PIN_SPI0_SCK'?
  107 |   digitalWrite(SPI_PIN_SCK, LOW);
      |                ^~~~~~~~~~~
      |                PIN_SPI0_SCK
*** [.pio/build/pico/src/spi_driver.cpp.o] Error 1
========================== [FAILED] Took 1.47 seconds ==========================
